--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   "author": "Jonathan Taylor",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.4",
+    "ramda": "^0.26.1"
+  },
+  "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
+    "@babel/core": "^7.4.5",
     "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^5.0.3",
-    "dlxlib": "^1.0.3",
     "eslint": "^5.16.0",
-    "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
-    "ramda": "^0.26.1",
-    "webpack": "^4.31.0",
+    "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1",
-    "worker-plugin": "^3.1.0"
+    "webpack-dev-server": "^3.3.1"
   }
 }
